# cakeup

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  build.cake  build.ps1  build.sh
scripts/: azure.cake  git.cake  rust.cake  utils.cake  version.cake
scripts/shell/: build_openssl_musl.sh
src/: args.rs  cake.rs  config.rs  dotnet.rs  host.rs  lib.rs  main.rs  nuget.rs
src/commands/: help.rs  install.rs  mod.rs  run.rs  version.rs
src/commands/run/: cake.rs  config.rs  dotnet.rs  host.rs  mod.rs  nuget.rs
src/runners/: cake.rs  dotnet.rs  mod.rs  nuget.rs
src/tasks/: mod.rs  nuget.rs  prepare.rs
src/utils/: github.rs  http.rs  log.rs  logger.rs  mod.rs  platform.rs  version.rs  zip.rs
