[package]
name = "cakeup"
version = "0.0.1"
authors = ["Patrik Svensson <patrik@patriksvensson.se>"]

[lib]
name = "cakeup"
path = "src/lib.rs"

[[bin]]
name = "cakeup"
path = "src/bin/main.rs"

[dependencies]
clap = "2.31.1"
curl = "0.4.11"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4"
semver = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
unzip = "0.1.0"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
incremental = false
opt-level = "z"